# lab02

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  build.ninja  cmake_install.cmake  functions.cpp  functions.h  ip_filter.cpp  main.cpp  main.h  test.tsv
.github/: macos.yml  ubuntu.yml
.github/workflows/: build.yml  macos.yml  release.yml  ubuntu.yml
gtests/: CMakeLists.txt  cmake_install.cmake  tests.cpp
tests/: CMakeLists.txt
tests/gtests/: CMakeLists.txt  tests.cpp
